[package]
name = "ghpc"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
ureq = { version = "2.12", features = ["json"] }
rsa = "0.9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
base64 = "0.22"
chrono = "0.4"
urlencoding = "2"
regex-lite = "0.1"
rpassword = "7"
